# rss_feeder

./: .gitignore  Cargo.toml
actix_example/: example.rs
hurl/: get.hurl  post.hurl
src/: main.rs  utils.rs
src/html_parse/: mod.rs
src/model/: mod.rs  schedule_dc.rs
src/router/: job_search.rs  mod.rs
src/schdule/: mod.rs  schedule_operation.rs
src/xml_parse/: html_parse.rs  mapped_detail.rs  mod.rs  task.rs
