[package]
name = "rss_feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.8"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false}
rss = "2.0.6"
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.6.3", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
actix-web = { version = "4.4.0", features = ["actix-tls"] }
chrono = "0.4.28"
